--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="/src/style.css" rel="stylesheet">
-    <title>Badminton</title>
+    <title>2PM | Badminton</title>
   </head>
   <body>
     <div id="app"></div>
