--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link href="/src/style.css" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <link href="/src/style.css" rel="stylesheet" />
     <title>2PM | Badminton</title>
+    <meta property="og:title" content="List of Badminton Players" />
+    <meta
+      property="og:description"
+      content="View, manage, and update all active and inactive badminton players, their stats, and payment status."
+    />
+    <meta
+      property="og:image"
+      content="https://yourdomain.com/assets/og-image.png"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:type" content="website" />
+    <meta
+      name="description"
+      content="Badminton player management application"
+    />
   </head>
   <body>
     <div id="app"></div>
