--- a/index.html
+++ b/index.html
@@ -14,18 +14,17 @@
       property="og:description"
       content="View, manage, and update all active and inactive badminton players, their stats, and payment status."
     />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:title" content="2PM | Badminton" />
     <meta
-      property="og:image"
-      content="https://yourdomain.com/assets/og-image.png"
+      name="description"
+      content="Badminton player management web/application"
     />
+    <meta property="og:image" content="/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:type" content="website" />
-    <meta
-      name="description"
-      content="Badminton player management application"
-    />
   </head>
   <body>
     <div id="app"></div>
